# laserGame

./: .gitignore  CMakeLists.txt  CMakeSettings.json
assets/levels/: 1  10  11  14  15  16  17  18  19  2  20  21  22  24  3  4  5  6  7  8  9  block  block3  block4  hysteresis  line1  line2  locked  no hysteresis  unreachable  unrechable2
assets/levels/ideas/: 3 colinear points  3 colors  block2  block4  logic  portal configuration  separated targets  single portal multiple lasers  single portal multiple lasers2
buildTool/: CMakeLists.txt  main.cpp
embedInExecutableTool/: CMakeLists.txt  main.cpp
game/: Animation.cpp  Animation.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  CongratulationsScreen.cpp  CongratulationsScreen.hpp  Constants.cpp  Constants.hpp  Editor.cpp  Editor.hpp  EditorActions.cpp  EditorActions.hpp  EditorEntities.cpp  EditorEntities.hpp  EditorGridTool.cpp  EditorLevel.cpp  FileSelectWidget.cpp  FileSelectWidget.hpp  Game.cpp  Game.hpp  GameAudio.cpp  GameAudio.hpp  GameEntities.hpp  GameRenderer.cpp  GameRenderer.hpp  GameSave.cpp  GameSave.hpp  GameSerialization.cpp  GameSerialization.hpp  GameUi.cpp  GameUi.hpp  GameUpdate.cpp  GameUpdate.hpp  GrabTools.cpp  GrabTools.hpp  Level.cpp  Level.data  Level.hpp  LevelSelect.cpp  (+28 more)
game/Shaders/: background.data  background.frag  background.vert  gameText.data  gameText.frag  gameText.vert  glowingArrow.data  glowingArrow.frag  glowingArrow.vert  noise1.glsl  noise2.glsl  noise2d.glsl  noise3.glsl  stereographic.glsl  stereographicDisk.data  stereographicDisk.frag  stereographicDisk.vert  stereographicLine.data  stereographicLine.frag  stereographicLine.vert  tilingBackground.data  tilingBackground.frag  tilingBackground.vert
